# agentarmor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  agentarmor.yaml  pyproject.toml  setup_claude_code.sh
.agents/workflows/: install-local.md
.github/workflows/: desktop-release.yml
docs/: architecture.md  claude_code_setup.md  hardened_layers.md  integrations.md  policy_language.md  pypi_and_github.md  quickstart.md  threat_model.md  use_cases.md
examples/: basic_usage.py  custom_policy.py  mcp_full_security_scan.py  mcp_scanner.py  ollama_agent.py  openclaw_guard.py  red_team.py  storage_encryption.py
policies/: default.yaml  financial_agent.yaml
src/agentarmor/: __init__.py  cli.py  pipeline.py
src/agentarmor/audit/: __init__.py  logger.py
src/agentarmor/core/: __init__.py  base.py  config.py  exceptions.py  types.py
src/agentarmor/crypto/: __init__.py  encryption.py  keys.py
src/agentarmor/data/: jailbreak_corpus.yaml
src/agentarmor/integrations/langchain/: __init__.py  callback.py
src/agentarmor/integrations/mcp/: __init__.py  guard.py  oauth_verifier.py  tls_validator.py
src/agentarmor/integrations/mcp_server/: server.py
src/agentarmor/integrations/openai/: __init__.py  wrapper.py
src/agentarmor/integrations/openclaw/: __init__.py
src/agentarmor/layers/: __init__.py
src/agentarmor/layers/context/: __init__.py  assembler.py
src/agentarmor/layers/execution/: __init__.py  l5_execution.py  sandbox.py
src/agentarmor/layers/identity/: __init__.py  manager.py
src/agentarmor/layers/ingestion/: __init__.py  scanner.py
src/agentarmor/layers/interagent/: __init__.py  l7_interagent.py  trust.py
src/agentarmor/layers/output/: __init__.py  filter.py
src/agentarmor/layers/planning/: __init__.py  l4_planning.py  target_sensitivity.py  validator.py
src/agentarmor/layers/storage/: __init__.py  encryption.py
src/agentarmor/policy/: __init__.py  engine.py
src/agentarmor/proxy/: server.py
src/agentarmor/redteam/: __init__.py  suite.py
tests/unit/: test_all.py  test_l1_semantic.py  test_layers_checked.py  test_mcp_server.py  test_openclaw.py  test_pipeline_progress.py  test_target_sensitivity.py  test_tls_oauth.py  test_trust_decay.py
