[project]
name = "agentarmor-core"
version = "0.4.0"
description = "Comprehensive security framework for agentic AI applications — 8-layer defense-in-depth."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Agastya Todi" },
]
keywords = ["ai", "agent", "security", "llm", "rag", "mcp", "guardrails", "owasp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "blake3>=0.4",
    "cryptography>=42.0",
    "tiktoken>=0.7",
    "structlog>=24.0",
    "jsonschema>=4.20",
    "ollama>=0.6.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "tavily-python>=0.7.23",
    "beautifulsoup4>=4.14.3",
]

[project.optional-dependencies]
proxy = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]
pii = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]
otel = [
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
]
mcp = [
    "mcp>=1.0",
]
oauth = [
    "PyJWT>=2.8",
]
all = [
    "agentarmor[proxy]",
    "agentarmor[pii]",
    "agentarmor[otel]",
    "agentarmor[mcp]",
    "agentarmor[oauth]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
agentarmor = "agentarmor.cli:main"
agentarmor-mcp = "agentarmor.integrations.mcp_server.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentarmor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
